tests/fixtures/invalid/round_list.py
# Cannot call round() with List[int]
x = round([1, 2, 3])
